force-app/main/default/objects/SCPSimulation__c/SCPSimulation__c.object-meta.xml
<CustomObject>
    <label>SCP Simulation information</label>
    <nameField>
        <label>SCP Simulation information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SCP Simulation information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>