force-app/main/default/objects/SCPSimulation__c/fields/az__c.field-meta.xml
<CustomField>
    <fullName>az__c</fullName>
    <label>AZ</label>
    <length>200</length>
    <type>Text</type>
</CustomField>