force-app/main/default/objects/SCPSimulation__c/fields/BOCode__c.field-meta.xml
<CustomField>
    <fullName>BOCode__c</fullName>
    <label>BO Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>