force-app/main/default/objects/SCPSimulation__c/fields/chgDate__c.field-meta.xml
<CustomField>
    <fullName>chgDate__c</fullName>
    <label>Simulation ModifiedDate</label>
    <type>Date</type>
</CustomField>