force-app/main/default/objects/SCPSimulation__c/fields/companyCode__c.field-meta.xml
<CustomField>
    <fullName>companyCode__c</fullName>
    <label>Company Code</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>