force-app/main/default/objects/SCPSimulation__c/fields/crncyCd__c.field-meta.xml
<CustomField>
    <fullName>crncyCd__c</fullName>
    <label>Currency Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>