force-app/main/default/objects/SCPSimulation__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>SCP Simulation information</relationshipLabel>
    <relationshipName>SCP_Simulation_information</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>