force-app/main/default/objects/SCPSimulation__c/fields/orderRate__c.field-meta.xml
<CustomField>
    <fullName>orderRate__c</fullName>
    <label>Order Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>