force-app/main/default/objects/SCPSimulation__c/fields/quotId__c.field-meta.xml
<CustomField>
    <fullName>quotId__c</fullName>
    <label>Simulation ID</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>