force-app/main/default/objects/SCPSimulation__c/fields/quotNm__c.field-meta.xml
<CustomField>
    <fullName>quotNm__c</fullName>
    <label>Simulation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>