force-app/main/default/objects/SCPSimulation__c/fields/quotStat__c.field-meta.xml
<CustomField>
    <fullName>quotStat__c</fullName>
    <label>Simulation Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>