force-app/main/default/objects/SCPSimulation__c/fields/regDate__c.field-meta.xml
<CustomField>
    <fullName>regDate__c</fullName>
    <label>Simulation Registratedate</label>
    <type>Date</type>
</CustomField>