force-app/main/default/objects/SCPSimulation__c/fields/serviceDt__c.field-meta.xml
<CustomField>
    <fullName>serviceDt__c</fullName>
    <label>Service Start Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>