force-app/main/default/objects/SCPSimulation__c/fields/totAmt__c.field-meta.xml
<CustomField>
    <fullName>totAmt__c</fullName>
    <label>Monthly Total Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>